--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "morgan": "~1.9.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-player": "^1.5.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
